--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,9 @@
   	<param-name>primefaces.FONT_AWESOME</param-name>
   	<param-value>true</param-value>
   </context-param>
+  
+  <context-param>
+  	<param-name>primefaces.THEME</param-name>
+  	<param-value>#{temaBean.tema}</param-value>
+  </context-param>
 </web-app>
